Fix greeting message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
         <!-- footer note real name -->
         <div class="container copyright">
             <div class="footer-note">
-                <i class="fa-regular fa-id-card"></i> I am <strong>Pradeep Kumar Gupta</strong> — but you'll find me everywhere as <strong style="background: #0f4b5c; color: white; padding: 4px 15px; border-radius: 50px;">Alven Alex</strong>  •  data entry + python + front-end
+                <i class="fa-regular fa-id-card"></i> I am <strong>Pradeep Kumar Gupta</strong> — but you'll find me everywhere as <strong style="background: #0f4b5c; color: white; padding: 4px 15px; border-radius: 50px;">aka Alven Alex</strong>  •  data entry + python + front-end
             </div>
         </div>
     </main>
@@ -990,3 +990,4 @@
     </style>
 </body>
 </html>
+
