Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
             <div class="contact-area">
                 <div class="contact-flex">
                     <div>
-                        <h2>Pradeep Kumar Gupta <small style="display:block; font-size:1rem; opacity:0.9;">Alven Alex</small></h2>
+                        <h2>Pradeep Kumar Gupta <small style="display:block; font-size:1rem; opacity:0.9;">aka Alven Alex</small></h2>
                         <p style="font-size: 1.2rem; margin-top: 16px; opacity: 0.9; max-width: 500px;">
                             <i class="fas fa-envelope"></i> mryashftp@gmail.com
                             <i class="fas fa-phone-alt"></i> +91 97959 41891
@@ -912,7 +912,7 @@
         <!-- footer note real name -->
         <div class="container copyright">
             <div class="footer-note">
-                <i class="fa-regular fa-id-card"></i> I am <strong>Pradeep Kumar Gupta</strong> — but you'll find me everywhere as <strong style="background: #0f4b5c; color: white; padding: 4px 15px; border-radius: 50px;">aka Alven Alex</strong>  •  data entry + python + front-end
+                <i class="fa-regular fa-id-card"></i> I am <strong>Pradeep Kumar Gupta</strong> — but you'll find me everywhere as <strong style="background: #0f4b5c; color: white; padding: 4px 15px; border-radius: 50px;"> Alven Alex</strong>  •  data entry + python + front-end
             </div>
         </div>
     </main>
@@ -990,4 +990,5 @@
     </style>
 </body>
 </html>
+
 
