--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                     <div class="img-caption">
                         <i class="fa-regular fa-circle-check"></i> Pradeep · Alven Alex
                     </div>
-                    <p style="font-size: 0.8rem; margin-top: 10px; color: #3f6872;"><i class="fa-solid fa-camera"></i> (your recent photo)</p>
+                    <p style="font-size: 0.8rem; margin-top: 10px; color: #3f6872;"><i class="fa-solid fa-camera"></i> (my recent photo)</p>
                 </div>
             </div>
         </div>
@@ -990,5 +990,6 @@
     </style>
 </body>
 </html>
+
 
 
