--- a/index.html
+++ b/index.html
@@ -764,15 +764,15 @@
             </div>
         </div>
 
-        <!-- SKILLS / EXPERTISE : data entry, python, frontend developer -->
+        <!-- SKILLS / EXPERTISE : Data Analysis • Python • Frontend Development -->
         <section id="skills">
             <div class="container">
                 <h2 class="section-title">Core arsenal</h2>
                 <div class="expertise-grid">
                     <div class="card">
                         <i class="fas fa-database"></i>
-                        <h3>Data entry</h3>
-                        <p>High-speed typing · 85 WPM · 99.8% accuracy. Advanced excel, Google sheets, OCR verification, large volume cleansing.</p>
+                        <h3> Data Analysis</h3>
+                        <p>High-speed typing · 45 WPM · 99.8% accuracy. Advanced excel, Google sheets, OCR verification, large volume cleansing.</p>
                         <div class="badge-list">
                             <span class="badge">Excel VBA</span>
                             <span class="badge">Power Query</span>
@@ -990,6 +990,7 @@
     </style>
 </body>
 </html>
+
 
 
 
