--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <div class="hero">
                 <div class="hero-text">
                     <span class="greet"><i class="fas fa-asterisk" style="color: #007a93; font-size: 0.9rem;"></i> PRADEEP KUMAR GUPTA</span>
-                    <h1>Data <span>Entry</span> · Python <br> & Front-End <span>Web</span></h1>
+                    <h1>Data <span>Analysis</span> · Python <br> & Front-End <span>Web</span></h1>
                     <div class="alias-badge">
                         <i class="fas fa-id-card"></i> known as <strong>Alven Alex</strong> — my signature
                     </div>
@@ -990,6 +990,7 @@
     </style>
 </body>
 </html>
+
 
 
 
