--- a/index.html
+++ b/index.html
@@ -723,9 +723,11 @@
                         <i class="fas fa-id-card"></i> known as <strong>Alven Alex</strong> — my signature
                     </div>
                     <p class="hero-desc">
-                        <i class="fas fa-map-pin" style="color: #005f73;"></i> 
-                        Precision in data, structure in code, elegance in design. 1+ years of transforming complexity into clarity.
-                    </p>
+    <i class="fas fa-map-pin" style="color: #005f73;"></i> 
+    Focused on structured data handling, Python-based automation, and modern responsive web design. 
+    Building practical projects to strengthen real-world technical skills.
+</p>
+
                     <div class="btn-group">
                         <a href="#contact" class="btn btn-primary"><i class="fas fa-paper-plane"></i> Hire me</a>
                         <a href="#work" class="btn btn-outline"><i class="fas fa-code"></i> View work</a>
@@ -771,13 +773,16 @@
                 <div class="expertise-grid">
                     <div class="card">
                         <i class="fas fa-database"></i>
-                        <h3> Data Analysis</h3>
-                        <p>High-speed typing · 45 WPM · 99.8% accuracy. Advanced excel, Google sheets, OCR verification, large volume cleansing.</p>
-                        <div class="badge-list">
-                            <span class="badge">Excel VBA</span>
-                            <span class="badge">Power Query</span>
-                            <span class="badge">Data validation</span>
-                        </div>
+                        <h3>Data Analysis & Entry</h3>
+<p>
+Focused on data automation, structured analysis, and responsive web development.
+</p>
+<div class="badge-list">
+    <span class="badge">Excel</span>
+    <span class="badge">Power Query</span>
+    <span class="badge">Data Cleaning</span>
+</div>
+
                     </div>
                     <div class="card">
                         <i class="fab fa-python"></i>
@@ -809,36 +814,41 @@
                 <h2 class="section-title">Recent impact</h2>
                 <div class="project-grid">
                     <div class="project-item">
-                        <i class="fas fa-file-invoice"></i>
-                        <h4>Inventory cleanse</h4>
-                        <span class="project-tag">Data entry</span>
-                        <p>Normalized 50k+ product records for e‑commerce, reduced duplication by 34%.</p>
-                    </div>
-                    <div class="project-item">
-                        <i class="fas fa-robot"></i>
-                        <h4>Auto invoice parser</h4>
-                        <span class="project-tag">Python</span>
-                        <p>Extracted data from 1000+ PDF invoices to Excel using regex & tabula, saved 20h/week.</p>
-                    </div>
-                    <div class="project-item">
-                        <i class="fas fa-globe"></i>
-                        <h4>Portfolio 2.0</h4>
-                        <span class="project-tag">Front-End</span>
-                        <p>Designed & developed this very site – fully responsive, modern glassmorphism.</p>
-                    </div>
-                    <div class="project-item">
-                        <i class="fas fa-chart-line"></i>
-                        <h4>Sales dashboard</h4>
-                        <span class="project-tag">Python + front</span>
-                        <p>Interactive dashboard with Flask & Chart.js, visualizing KPIs for local retailer.</p>
-                    </div>
+    <i class="fas fa-file-invoice"></i>
+    <h4>Inventory Data Structuring</h4>
+    <span class="project-tag">Practice Project</span>
+    <p>Organized raw product datasets into structured formats for reporting and analysis.</p>
+</div>
+
+<div class="project-item">
+    <i class="fas fa-robot"></i>
+    <h4>Invoice Data Extraction Script</h4>
+    <span class="project-tag">Python Automation</span>
+    <p>Developed a Python script to extract structured information from sample invoice PDFs into Excel.</p>
+</div>
+
+<div class="project-item">
+    <i class="fas fa-globe"></i>
+    <h4>Portfolio Website 2.0</h4>
+    <span class="project-tag">Front-End</span>
+    <p>Designed and developed a responsive personal portfolio using HTML, CSS, and JavaScript.</p>
+</div>
+
+<div class="project-item">
+    <i class="fas fa-chart-line"></i>
+    <h4>Sales Dashboard Demo</h4>
+    <span class="project-tag">Data Visualization</span>
+    <p>Built a dashboard prototype using Python and chart libraries for analytics practice.</p>
+</div>
+
                 </div>
                 <!-- extra content block -->
                 <div class="extra-row">
                     <div class="extra-col">
                         <i class="fas fa-keyboard"></i>
                         <h5>45-50 WPM</h5>
-                        <p style="color: #1c5a64;">Data entry specialist with 5+ yrs, medical & financial records.</p>
+                        <p style="color: #1c5a64;">Practicing structured data workflows and improving speed with consistent accuracy.
+</p>
                     </div>
                     <div class="extra-col">
                         <i class="fas fa-code-branch"></i>
@@ -860,25 +870,21 @@
         </section>
 
         <!-- MORE CONTENT – stats / attributes -->
-        <div class="container">
-            <div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: space-between; margin: 30px 0 20px;">
-                <div style="background: white; padding: 30px; border-radius: 30px; flex: 1 1 260px; box-shadow: 0 8px 20px rgba(0,0,0,0.02); transition: all 0.2s;">
-                    <i class="fas fa-trophy" style="color: #00778b; font-size: 2rem;"></i>
-                    <h3 style="font-size: 1.7rem; margin: 10px 0 0px; color: #0b3b44;">100%</h3>
-                    <p style="color: #2a5f68;">deadline adherence · data accuracy</p>
-                </div>
-                <div style="background: white; padding: 30px; border-radius: 30px; flex: 1 1 260px; box-shadow: 0 8px 20px rgba(0,0,0,0.02); transition: all 0.2s;">
-                    <i class="fas fa-clock" style="color: #00778b; font-size: 2rem;"></i>
-                    <h3 style="font-size: 1.7rem; margin: 10px 0 0px; color: #0b3b44;">4.2K+</h3>
-                    <p style="color: #2a5f68;">hours saved via Python automation</p>
-                </div>
-                <div style="background: white; padding: 30px; border-radius: 30px; flex: 1 1 260px; box-shadow: 0 8px 20px rgba(0,0,0,0.02); transition: all 0.2s;">
-                    <i class="fas fa-smile" style="color: #00778b; font-size: 2rem;"></i>
-                    <h3 style="font-size: 1.7rem; margin: 10px 0 0px; color: #0b3b44;">30+</h3>
-                    <p style="color: #2a5f68;">front-end components & websites</p>
-                </div>
-            </div>
-        </div>
+       <div style="background: white; padding: 30px; border-radius: 30px; flex: 1 1 260px;">
+    <h3>Career Focus</h3>
+    <p>Entry-level Data Analyst · Automation Enthusiast · Front-End Developer</p>
+</div>
+
+<div style="background: white; padding: 30px; border-radius: 30px; flex: 1 1 260px;">
+    <h3>Learning Path</h3>
+    <p>Advanced Excel · Python Pandas · Power BI · Real-world automation systems</p>
+</div>
+
+<div style="background: white; padding: 30px; border-radius: 30px; flex: 1 1 260px;">
+    <h3>Availability</h3>
+    <p>Remote internships · Entry-level roles · Freelance automation tasks</p>
+</div>
+
 
         <!-- CONTACT & FOOTER -->
         <div id="contact" class="container" style="margin-bottom: 60px;">
@@ -907,12 +913,17 @@
                     <span><i class="fas fa-heart" style="color: #ffb4b4;"></i> built with front-end craft</span>
                 </div>
             </div>
+            <div style="margin-top:30px; font-size:1.1rem; color:#1e5f6b;">
+    Bachelor of Arts graduate with growing specialization in data automation and analytics.
+    Focused on building an international-ready professional profile.
+</div>
+
         </div>
         
         <!-- footer note real name -->
         <div class="container copyright">
             <div class="footer-note">
-                <i class="fa-regular fa-id-card"></i> I am <strong>Pradeep Kumar Gupta</strong> — but you'll find me everywhere as <strong style="background: #0f4b5c; color: white; padding: 4px 15px; border-radius: 50px;"> Alven Alex</strong>  •  data entry + python + front-end
+                <i class="fa-regular fa-id-card"></i> I am <strong>Pradeep Kumar Gupta</strong> — but you'll find me everywhere as <strong style="background: #0f4b5c; color: white; padding: 4px 15px; border-radius: 50px;"> Alven Alex</strong>  •  data analysis  + python + front-end
             </div>
         </div>
     </main>
@@ -990,6 +1001,7 @@
     </style>
 </body>
 </html>
+
 
 
 
