--- a/index.html
+++ b/index.html
@@ -724,8 +724,7 @@
                     </div>
                     <p class="hero-desc">
     <i class="fas fa-map-pin" style="color: #005f73;"></i> 
-    Focused on structured data handling, Python-based automation, and modern responsive web design. 
-    Building practical projects to strengthen real-world technical skills.
+    Focused on data automation, structured analysis, and responsive web development.
 </p>
 
                     <div class="btn-group">
@@ -1001,6 +1000,7 @@ Focused on data automation, structured analysis, and responsive web development.
     </style>
 </body>
 </html>
+
 
 
 
