Update fmt.Println output from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -701,6 +701,7 @@
                         <a href="#skills">Expertise</a>
                         <a href="#work">Projects</a>
                         <a href="#contact">Contact</a>
+                        <a href="https://mryash-ftp.github.io/Alven-Library/">Alven Library</a>
                     </div>
                     <!-- 🌓 NEON THEME TOGGLE BUTTON -->
                     <button id="themeToggle" class="theme-toggle" aria-label="Switch between light and neon dark mode">
@@ -1000,6 +1001,7 @@ Focused on data automation, structured analysis, and responsive web development.
     </style>
 </body>
 </html>
+
 
 
 
