--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                     <div class="nav-links">
                         <a href="#home">Home</a>
                         <a href="#skills">Expertise</a>
-                        <a href="#work">Projects</a>
+                        <a href="#work">Skills</a>
                         <a href="#contact">Contact</a>
                         <a href="https://mryash-ftp.github.io/Alven-Library/">Alven Library</a>
                     </div>
@@ -767,8 +767,8 @@
         </div>
 
         <!-- SKILLS / EXPERTISE : Data Analysis • Python • Frontend Development -->
-        <section id="skills">
-            <div class="container">
+        <section id="skills" id="work">
+            <div class="container" id="work">
                 <h2 class="section-title">Core arsenal</h2>
                 <div class="expertise-grid">
                     <div class="card">
@@ -807,40 +807,6 @@ Focused on data automation, structured analysis, and responsive web development.
                 </div>
             </div>
         </section>
-
-        <!-- MORE ATTRACTIVE CONTENT : projects & works -->
-        <section id="work" style="background: #f2f8fa; transition: background 0.2s;">
-            <div class="container">
-                <h2 class="section-title">Recent impact</h2>
-                <div class="project-grid">
-                    <div class="project-item">
-    <i class="fas fa-file-invoice"></i>
-    <h4>Inventory Data Structuring</h4>
-    <span class="project-tag">Practice Project</span>
-    <p>Organized raw product datasets into structured formats for reporting and analysis.</p>
-</div>
-
-<div class="project-item">
-    <i class="fas fa-robot"></i>
-    <h4>Invoice Data Extraction Script</h4>
-    <span class="project-tag">Python Automation</span>
-    <p>Developed a Python script to extract structured information from sample invoice PDFs into Excel.</p>
-</div>
-
-<div class="project-item">
-    <i class="fas fa-globe"></i>
-    <h4>Portfolio Website 2.0</h4>
-    <span class="project-tag">Front-End</span>
-    <p>Designed and developed a responsive personal portfolio using HTML, CSS, and JavaScript.</p>
-</div>
-
-<div class="project-item">
-    <i class="fas fa-chart-line"></i>
-    <h4>Sales Dashboard Demo</h4>
-    <span class="project-tag">Data Visualization</span>
-    <p>Built a dashboard prototype using Python and chart libraries for analytics practice.</p>
-</div>
-
                 </div>
                 <!-- extra content block -->
                 <div class="extra-row">
@@ -1001,6 +967,7 @@ Focused on data automation, structured analysis, and responsive web development.
     </style>
 </body>
 </html>
+
 
 
 
