--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@ Focused on data automation, structured analysis, and responsive web development.
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/mryash-ftp" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/pradeep-kumar-7975713a4/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href=https://www.linkedin.com/in/pradeep-alven-dev/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                           <a href="https://www.instagram.com/mryashftp/?igsh=dzlvNmltY3lyeW53&utm_source=ig_contact_invite#" target="_blank"><i class="fab fa-instagram"></i></a>
                           <a href="mailto:mryashftp@gmail.com " target="_blank"><i class="fa-regular  fa-envelope"  ></i></a>
                     </div>
@@ -967,6 +967,7 @@ Focused on data automation, structured analysis, and responsive web development.
     </style>
 </body>
 </html>
+
 
 
 
